SD Permlink ID0013584

--- a/merli_cer/src/simpple/xtec/i18n/missatges_en.properties
+++ b/merli_cer/src/simpple/xtec/i18n/missatges_en.properties
@@ -389,6 +389,7 @@ cerca.resultatsCerca.comental=Comment it
 cerca.resultatsCerca.defecte=Default
 cerca.resultatsCerca.paginaResultats=Results page
 cerca.resultatsCerca.subscriureCerca=Subscribe to this search
+cerca.resultatsCerca.subscriurePermalink=Copy the permanent link to this search
 cerca.resultatsCerca.noResultats=No results where found for this search
 cerca.resultatsCerca.catalegMerli=Merl\u00ed catalog
 cerca.resultatsCerca.versioImprimir=Printable version
