--- a/merli_cer/src/simpple/xtec/i18n/missatges_es.properties
+++ b/merli_cer/src/simpple/xtec/i18n/missatges_es.properties
@@ -399,6 +399,7 @@ cerca.resultatsCerca.comental=Comentalo
 cerca.resultatsCerca.defecte=Relevancia
 cerca.resultatsCerca.paginaResultats=P\u00e1gina de resultados
 cerca.resultatsCerca.subscriureCerca=Suscribirse a esta b\u00fasqueda
+cerca.resultatsCerca.subscriurePermalink=Copiar el enlace permanente a los resultados de esta b\u00fasqueda
 cerca.resultatsCerca.noResultats=No se encontr\u00f3 ning\u00fan resultado para esta b\u00fasqueda
 cerca.resultatsCerca.catalegMerli=Cat\u00e1logo Merl\u00ed
 cerca.resultatsCerca.versioImprimir=Versi\u00f3n para imprimir
