--- a/merli_cer/src/simpple/xtec/i18n/missatges_oc.properties
+++ b/merli_cer/src/simpple/xtec/i18n/missatges_oc.properties
@@ -394,6 +394,7 @@ cerca.resultatsCerca.comental=Comenta'l
 cerca.resultatsCerca.defecte=Def\u00e8cte
 cerca.resultatsCerca.paginaResultats=Pagina de resultats
 cerca.resultatsCerca.subscriureCerca=Soscriu aguesta c\u00e8rca
+cerca.resultatsCerca.subscriurePermalink=Copiar eth ligam permanent as resultats d'aguesta rec\u00e8rca
 cerca.resultatsCerca.noResultats=Non s'a trobat cap resultat entad aguesta cerque
 cerca.resultatsCerca.catalegMerli=Catal\u00f2g Merl\u00ed
 cerca.resultatsCerca.versioImprimir=Version ent\u00e0 estampar
