--- a/merli_cer/src/simpple/xtec/i18n/missatges_ca.properties
+++ b/merli_cer/src/simpple/xtec/i18n/missatges_ca.properties
@@ -403,6 +403,7 @@ cerca.resultatsCerca.comental=Comenta'l
 cerca.resultatsCerca.defecte=Rellev&agrave;ncia
 cerca.resultatsCerca.paginaResultats=P&agrave;gina de resultats
 cerca.resultatsCerca.subscriureCerca=Subscriu aquesta cerca
+cerca.resultatsCerca.subscriurePermalink=Copiar l'enllaç permanent als resultats d'aquesta recerca
 cerca.resultatsCerca.noResultats=No s'ha trobat cap resultat per a aquesta cerca
 cerca.resultatsCerca.catalegMerli=Cat&agrave;leg Merl&iacute;
 cerca.resultatsCerca.versioImprimir=Versi&oacute; per imprimir
